--- a/tket-py/examples/Guppy-opt-example.ipynb
+++ b/tket-py/examples/Guppy-opt-example.ipynb
@@ -436,7 +436,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x126a78980>"
+       "<graphviz.graphs.Digraph at 0x10db13cb0>"
       ]
      },
      "execution_count": 4,
@@ -749,7 +749,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x126946210>"
+       "<graphviz.graphs.Digraph at 0x10dbf9250>"
       ]
      },
      "execution_count": 8,
@@ -1025,7 +1025,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x12698cd50>"
+       "<graphviz.graphs.Digraph at 0x10db3e050>"
       ]
      },
      "execution_count": 11,
@@ -1120,59 +1120,59 @@
        "<path fill=\"none\" stroke=\"#1cade4\" stroke-width=\"1.5\" d=\"M77.25,-254.12C85.96,-254.12 82.52,-244.51 88,-237.75 98.73,-224.5 108.51,-226.27 115,-210.5 135.93,-159.64 114.06,-141.75 114.06,-86.75\"/>\n",
        "<text xml:space=\"preserve\" text-anchor=\"middle\" x=\"137.19\" y=\"-161.82\" font-family=\"monospace\" font-size=\"9.00\">Qubit</text>\n",
        "</g>\n",
-       "<!-- 4 -->\n",
-       "<g id=\"node3\" class=\"node\">\n",
-       "<title>4</title>\n",
+       "<!-- 6 -->\n",
+       "<g id=\"node5\" class=\"node\">\n",
+       "<title>6</title>\n",
        "<polygon fill=\"#accbf9\" stroke=\"none\" points=\"28.25,-119 28.25,-210.5 109.75,-210.5 109.75,-119 28.25,-119\"/>\n",
        "<polygon fill=\"white\" stroke=\"none\" points=\"34.25,-185.75 34.25,-204.5 103.75,-204.5 103.75,-185.75 34.25,-185.75\"/>\n",
        "<polygon fill=\"none\" stroke=\"#1cade4\" points=\"34.25,-185.75 34.25,-204.5 103.75,-204.5 103.75,-185.75 34.25,-185.75\"/>\n",
        "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"66\" y=\"-192\" font-family=\"monospace\" font-size=\"10.00\">0</text>\n",
        "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"35.25\" y=\"-166.3\" font-family=\"monospace\" font-weight=\"bold\" font-size=\"11.00\">Custom(H) </text>\n",
-       "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"55.5\" y=\"-155.3\" font-family=\"monospace\" font-weight=\"bold\" font-size=\"11.00\">(4) </text>\n",
+       "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"55.5\" y=\"-155.3\" font-family=\"monospace\" font-weight=\"bold\" font-size=\"11.00\">(6) </text>\n",
        "<polygon fill=\"white\" stroke=\"none\" points=\"34.25,-125 34.25,-143.75 103.75,-143.75 103.75,-125 34.25,-125\"/>\n",
        "<polygon fill=\"none\" stroke=\"#1cade4\" points=\"34.25,-125 34.25,-143.75 103.75,-143.75 103.75,-125 34.25,-125\"/>\n",
        "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"66\" y=\"-131.25\" font-family=\"monospace\" font-size=\"10.00\">0</text>\n",
        "<polygon fill=\"none\" stroke=\"white\" points=\"28.25,-119 28.25,-210.5 109.75,-210.5 109.75,-119 28.25,-119\"/>\n",
        "</g>\n",
-       "<!-- 2&#45;&gt;4 -->\n",
+       "<!-- 2&#45;&gt;6 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>2:out.0&#45;&gt;4:in.0</title>\n",
+       "<title>2:out.0&#45;&gt;6:in.0</title>\n",
        "<path fill=\"none\" stroke=\"#1cade4\" stroke-width=\"1.5\" d=\"M43.62,-243.75C43.62,-223.35 69,-225.9 69,-205.5\"/>\n",
        "<text xml:space=\"preserve\" text-anchor=\"middle\" x=\"76.64\" y=\"-221.2\" font-family=\"monospace\" font-size=\"9.00\">Qubit</text>\n",
        "</g>\n",
-       "<!-- 4&#45;&gt;3 -->\n",
-       "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>4:out.0&#45;&gt;3:in.0</title>\n",
-       "<path fill=\"none\" stroke=\"#1cade4\" stroke-width=\"1.5\" d=\"M69,-124C69,-105.43 87.94,-105.32 87.94,-86.75\"/>\n",
-       "<text xml:space=\"preserve\" text-anchor=\"middle\" x=\"96.49\" y=\"-102.45\" font-family=\"monospace\" font-size=\"9.00\">Qubit</text>\n",
-       "</g>\n",
-       "<!-- 5 -->\n",
-       "<g id=\"node4\" class=\"node\">\n",
-       "<title>5</title>\n",
+       "<!-- 4 -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>4</title>\n",
        "<polygon fill=\"#accbf9\" stroke=\"none\" points=\"93.38,-238.75 93.38,-302.5 154.62,-302.5 154.62,-238.75 93.38,-238.75\"/>\n",
        "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"100.38\" y=\"-286.05\" font-family=\"monospace\" font-weight=\"bold\" font-size=\"11.00\">Tag(0) </text>\n",
-       "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"110.5\" y=\"-275.05\" font-family=\"monospace\" font-weight=\"bold\" font-size=\"11.00\">(5) </text>\n",
+       "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"110.5\" y=\"-275.05\" font-family=\"monospace\" font-weight=\"bold\" font-size=\"11.00\">(4) </text>\n",
        "<polygon fill=\"white\" stroke=\"none\" points=\"99.38,-244.75 99.38,-263.5 148.62,-263.5 148.62,-244.75 99.38,-244.75\"/>\n",
        "<polygon fill=\"none\" stroke=\"#1cade4\" points=\"99.38,-244.75 99.38,-263.5 148.62,-263.5 148.62,-244.75 99.38,-244.75\"/>\n",
        "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"121\" y=\"-251\" font-family=\"monospace\" font-size=\"10.00\">0</text>\n",
        "<polygon fill=\"none\" stroke=\"white\" points=\"93.38,-238.75 93.38,-302.5 154.62,-302.5 154.62,-238.75 93.38,-238.75\"/>\n",
        "</g>\n",
-       "<!-- 6 -->\n",
-       "<g id=\"node5\" class=\"node\">\n",
-       "<title>6</title>\n",
+       "<!-- 5 -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>5</title>\n",
        "<polygon fill=\"#accbf9\" stroke=\"none\" points=\"169.5,-132.88 169.5,-196.62 318.5,-196.62 318.5,-132.88 169.5,-132.88\"/>\n",
        "<polygon fill=\"white\" stroke=\"none\" points=\"175.5,-171.88 175.5,-190.62 312.5,-190.62 312.5,-171.88 175.5,-171.88\"/>\n",
        "<polygon fill=\"none\" stroke=\"#1cade4\" points=\"175.5,-171.88 175.5,-190.62 312.5,-190.62 312.5,-171.88 175.5,-171.88\"/>\n",
        "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"241\" y=\"-178.12\" font-family=\"monospace\" font-size=\"10.00\">0</text>\n",
        "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"176.5\" y=\"-152.43\" font-family=\"monospace\" font-weight=\"bold\" font-size=\"11.00\">Custom(UnpackTuple) </text>\n",
-       "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"230.5\" y=\"-141.43\" font-family=\"monospace\" font-weight=\"bold\" font-size=\"11.00\">(6) </text>\n",
+       "<text xml:space=\"preserve\" text-anchor=\"start\" x=\"230.5\" y=\"-141.43\" font-family=\"monospace\" font-weight=\"bold\" font-size=\"11.00\">(5) </text>\n",
        "<polygon fill=\"none\" stroke=\"white\" points=\"169.5,-132.88 169.5,-196.62 318.5,-196.62 318.5,-132.88 169.5,-132.88\"/>\n",
        "</g>\n",
-       "<!-- 5&#45;&gt;6 -->\n",
+       "<!-- 4&#45;&gt;5 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>5:out.0&#45;&gt;6:in.0</title>\n",
+       "<title>4:out.0&#45;&gt;5:in.0</title>\n",
        "<path fill=\"none\" stroke=\"#1cade4\" stroke-width=\"1.5\" d=\"M149.62,-254.12C166.74,-254.12 157.39,-181.25 174.5,-181.25\"/>\n",
        "<text xml:space=\"preserve\" text-anchor=\"middle\" x=\"172.4\" y=\"-221.2\" font-family=\"monospace\" font-size=\"9.00\">Unit</text>\n",
+       "</g>\n",
+       "<!-- 6&#45;&gt;3 -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>6:out.0&#45;&gt;3:in.0</title>\n",
+       "<path fill=\"none\" stroke=\"#1cade4\" stroke-width=\"1.5\" d=\"M69,-124C69,-105.43 87.94,-105.32 87.94,-86.75\"/>\n",
+       "<text xml:space=\"preserve\" text-anchor=\"middle\" x=\"96.49\" y=\"-102.45\" font-family=\"monospace\" font-size=\"9.00\">Qubit</text>\n",
        "</g>\n",
        "<!-- 1 -->\n",
        "<g id=\"node6\" class=\"node\">\n",
@@ -1197,7 +1197,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x126a616d0>"
+       "<graphviz.graphs.Digraph at 0x10daafb60>"
       ]
      },
      "execution_count": 13,
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "78746bc6-34fe-4a68-bf94-063e3397e4e0",
    "metadata": {},
    "outputs": [],
@@ -1280,19 +1280,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "PyTk1EncodeError",
-     "evalue": "An unsupported subgraph has no qubits or bits to attach the barrier command to",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mPyTk1EncodeError\u001b[39m                          Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m optimized_1q_hugr = \u001b[43msquash_pass\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmy_1q_hugr_graph\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(count_ops(my_1q_hugr_graph, \u001b[33m\"\u001b[39m\u001b[33mRz\u001b[39m\u001b[33m\"\u001b[39m))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/tket2/.venv/lib/python3.14/site-packages/hugr/passes/_composable_pass.py:28\u001b[39m, in \u001b[36mComposablePass.__call__\u001b[39m\u001b[34m(self, hugr, inplace)\u001b[39m\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, hugr: Hugr, *, inplace: \u001b[38;5;28mbool\u001b[39m = \u001b[38;5;28;01mTrue\u001b[39;00m) -> Hugr:\n\u001b[32m     27\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Call the pass to transform a HUGR, returning a Hugr.\"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhugr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minplace\u001b[49m\u001b[43m=\u001b[49m\u001b[43minplace\u001b[49m\u001b[43m)\u001b[49m.hugr\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/tket2/tket-py/tket/passes.py:115\u001b[39m, in \u001b[36mPytketPass.run\u001b[39m\u001b[34m(self, hugr, inplace)\u001b[39m\n\u001b[32m    113\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mrun\u001b[39m(\u001b[38;5;28mself\u001b[39m, hugr: Hugr, *, inplace: \u001b[38;5;28mbool\u001b[39m = \u001b[38;5;28;01mTrue\u001b[39;00m) -> PassResult:\n\u001b[32m    114\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Run the pytket pass as a HUGR transform returning a PassResult.\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m115\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mimplement_pass_run\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    116\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m    117\u001b[39m \u001b[43m        \u001b[49m\u001b[43mhugr\u001b[49m\u001b[43m=\u001b[49m\u001b[43mhugr\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    118\u001b[39m \u001b[43m        \u001b[49m\u001b[43minplace\u001b[49m\u001b[43m=\u001b[49m\u001b[43minplace\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    119\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcopy_call\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mh\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_run_pytket_pass_on_hugr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minplace\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    120\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/tket2/.venv/lib/python3.14/site-packages/hugr/passes/_composable_pass.py:72\u001b[39m, in \u001b[36mimplement_pass_run\u001b[39m\u001b[34m(composable_pass, hugr, inplace, inplace_call, copy_call)\u001b[39m\n\u001b[32m     70\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m inplace_call(hugr)\n\u001b[32m     71\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m copy_call \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m72\u001b[39m     pass_result = \u001b[43mcopy_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhugr\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     73\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m pass_result.modified:\n\u001b[32m     74\u001b[39m         hugr._overwrite_hugr(pass_result.hugr)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/tket2/tket-py/tket/passes.py:119\u001b[39m, in \u001b[36mPytketPass.run.<locals>.<lambda>\u001b[39m\u001b[34m(h)\u001b[39m\n\u001b[32m    113\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mrun\u001b[39m(\u001b[38;5;28mself\u001b[39m, hugr: Hugr, *, inplace: \u001b[38;5;28mbool\u001b[39m = \u001b[38;5;28;01mTrue\u001b[39;00m) -> PassResult:\n\u001b[32m    114\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Run the pytket pass as a HUGR transform returning a PassResult.\"\"\"\u001b[39;00m\n\u001b[32m    115\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m implement_pass_run(\n\u001b[32m    116\u001b[39m         \u001b[38;5;28mself\u001b[39m,\n\u001b[32m    117\u001b[39m         hugr=hugr,\n\u001b[32m    118\u001b[39m         inplace=inplace,\n\u001b[32m--> \u001b[39m\u001b[32m119\u001b[39m         copy_call=\u001b[38;5;28;01mlambda\u001b[39;00m h: \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_run_pytket_pass_on_hugr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minplace\u001b[49m\u001b[43m)\u001b[49m,\n\u001b[32m    120\u001b[39m     )\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/tket2/tket-py/tket/passes.py:125\u001b[39m, in \u001b[36mPytketPass._run_pytket_pass_on_hugr\u001b[39m\u001b[34m(self, hugr, inplace)\u001b[39m\n\u001b[32m    123\u001b[39m pass_json = json.dumps(\u001b[38;5;28mself\u001b[39m.pytket_pass.to_dict())\n\u001b[32m    124\u001b[39m compiler_state: Tk2Circuit = Tk2Circuit.from_bytes(hugr.to_bytes())\n\u001b[32m--> \u001b[39m\u001b[32m125\u001b[39m opt_program = \u001b[43mtket1_pass\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcompiler_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpass_json\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtraverse_subcircuits\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m    126\u001b[39m new_hugr = Hugr.from_str(opt_program.to_str())\n\u001b[32m    127\u001b[39m \u001b[38;5;66;03m# `for_pass` assumes Modified is true by default\u001b[39;00m\n\u001b[32m    128\u001b[39m \u001b[38;5;66;03m# TODO: if we can extract better info from tket1 as to what happened, use it.\u001b[39;00m\n\u001b[32m    129\u001b[39m \u001b[38;5;66;03m# Are there better results  we can use too?\u001b[39;00m\n",
-      "\u001b[31mPyTk1EncodeError\u001b[39m: An unsupported subgraph has no qubits or bits to attach the barrier command to"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
      ]
     }
    ],
