--- a/tket-py/examples/Guppy-opt-example.ipynb
+++ b/tket-py/examples/Guppy-opt-example.ipynb
@@ -32,13 +32,12 @@
     "from guppylang import guppy\n",
     "from guppylang.std.angles import pi\n",
     "from guppylang.std.quantum import cx, h, qubit, t, rz\n",
-    "from guppylang.std.qsystem import phased_x\n",
     "\n",
     "from hugr.hugr.base import Hugr\n",
     "from hugr.hugr.render import DotRenderer, RenderConfig\n",
     "\n",
     "from graphviz import Digraph\n",
-    "from tket.passes import NormalizeGuppy, PytketPass\n",
+    "from tket.passes import NormalizeGuppy, PytketPass, PassResult\n",
     "from pytket.passes import RemoveRedundancies, SquashRzPhasedX"
    ]
   },
@@ -75,6 +74,7 @@
     "    t(q1)\n",
     "    cx(q0, q1)\n",
     "\n",
+    "\n",
     "zz_hugr_graph: Hugr = pauli_zz_rotation.compile_function().modules[0]"
    ]
   },
@@ -95,6 +95,7 @@
    "source": [
     "# Configure Hugr visualizer\n",
     "my_renderer = DotRenderer(RenderConfig(display_node_id=True, display_metadata=False))\n",
+    "\n",
     "\n",
     "def draw(hugr: Hugr) -> Digraph:\n",
     "    \"\"\"Draw a Hugr graph with the DotRenderer.\"\"\"\n",
@@ -436,7 +437,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x10db13cb0>"
+       "<graphviz.graphs.Digraph at 0x121034ec0>"
       ]
      },
      "execution_count": 4,
@@ -512,7 +513,7 @@
     "    for _, data in hugr.nodes():\n",
     "        if string_name in data.op.name():\n",
     "            count += 1\n",
-    "    \n",
+    "\n",
     "    return count"
    ]
   },
@@ -534,8 +535,8 @@
    ],
    "source": [
     "print(f\"Total number of HUGR nodes = {zz_hugr_graph.num_nodes()}\")\n",
-    "print(f\"# CX operations = {count_ops(zz_hugr_graph, \"CX\")}\")\n",
-    "print(f\"# MakeTuple operations = {count_ops(zz_hugr_graph, \"MakeTuple\")}\")\n"
+    "print(f\"# CX operations = {count_ops(zz_hugr_graph, 'CX')}\")\n",
+    "print(f\"# MakeTuple operations = {count_ops(zz_hugr_graph, 'MakeTuple')}\")"
    ]
   },
   {
@@ -749,7 +750,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x10dbf9250>"
+       "<graphviz.graphs.Digraph at 0x120ed6b10>"
       ]
      },
      "execution_count": 8,
@@ -760,7 +761,9 @@
    "source": [
     "normalize = NormalizeGuppy()\n",
     "\n",
-    "cleaned_zz_hugr = normalize(zz_hugr_graph) # Invoke the NormalizeGuppy pass via the __call__ method.\n",
+    "cleaned_zz_hugr = normalize(\n",
+    "    zz_hugr_graph\n",
+    ")  # Invoke the NormalizeGuppy pass via the __call__ method.\n",
     "\n",
     "draw(cleaned_zz_hugr)"
    ]
@@ -783,8 +786,8 @@
    ],
    "source": [
     "print(f\"Total number of HUGR nodes = {zz_hugr_graph.num_nodes()}\")\n",
-    "print(f\"# CX operations = {count_ops(zz_hugr_graph, \"CX\")}\")\n",
-    "print(f\"# MakeTuple operations = {count_ops(zz_hugr_graph, \"MakeTuple\")}\")"
+    "print(f\"# CX operations = {count_ops(zz_hugr_graph, 'CX')}\")\n",
+    "print(f\"# MakeTuple operations = {count_ops(zz_hugr_graph, 'MakeTuple')}\")"
    ]
   },
   {
@@ -1025,7 +1028,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x10db3e050>"
+       "<graphviz.graphs.Digraph at 0x120f54650>"
       ]
      },
      "execution_count": 11,
@@ -1034,7 +1037,9 @@
     }
    ],
    "source": [
-    "my_hugr_graph = normalize(redundant_cx.compile_function().modules[0]) # get normalized hugr for program above\n",
+    "my_hugr_graph = normalize(\n",
+    "    redundant_cx.compile_function().modules[0]\n",
+    ")  # get normalized hugr for program above\n",
     "draw(my_hugr_graph)"
    ]
   },
@@ -1055,12 +1060,90 @@
    "source": [
     "rr_pass = PytketPass(RemoveRedundancies())\n",
     "\n",
-    "optimized_hugr = rr_pass(my_hugr_graph)"
+    "pass_result: PassResult = rr_pass.run(my_hugr_graph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c90ec617",
+   "metadata": {},
+   "source": [
+    "Here we are using the `PytketPass.run` method which returns a `PassResult` object."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "b52ed22d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimized_hugr = pass_result.hugr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da12af9e",
+   "metadata": {},
+   "source": [
+    "In addition to the transformed `Hugr` instance, we can also see some more information from `PassResult`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65f5453b",
+   "metadata": {},
+   "source": [
+    "We can check whether our optimization was performed in place."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d97591ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pass_result.inplace)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04bd0b47",
+   "metadata": {},
+   "source": [
+    "We can also check whether the `Hugr` was modified by the `PytketPass` as follows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "07632beb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pass_result.modified)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "46b3f860-4bf5-4e37-9764-cc4d8e82ce1c",
    "metadata": {},
    "outputs": [
@@ -1197,10 +1280,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x10daafb60>"
+       "<graphviz.graphs.Digraph at 0x121008230>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "aff9a582",
    "metadata": {},
    "outputs": [
@@ -1224,7 +1307,7 @@
     }
    ],
    "source": [
-    "print(f\"# CX gates = {count_ops(my_hugr_graph, \"CX\")}\")"
+    "print(f\"# CX gates = {count_ops(my_hugr_graph, 'CX')}\")"
    ]
   },
   {
@@ -1240,42 +1323,64 @@
    "id": "ecffd448-2966-4987-a856-7ecc3df5e80c",
    "metadata": {},
    "source": [
-    "## Example 2: Simplifying sequences of single qubit gates\n"
+    "## Example 2: Simplifying sequences of single qubit gates\n",
+    "\n",
+    "\n",
+    "The second example we will show is simplifying sequences of single qubit gates using the [SqaushRzPhasedX](https://docs.quantinuum.com/tket/api-docs/passes.html#pytket.passes.SquashRzPhasedX) pass from pytket. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "78746bc6-34fe-4a68-bf94-063e3397e4e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "@guppy\n",
     "def redundant_1q_gates(q0: qubit) -> None:\n",
-    "    h(q0)\n",
-    "    rz(q0, pi/2)\n",
-    "    rz(q0, pi/2)\n",
-    "    phased_x(q0, pi/2, pi/4)\n",
-    "    phased_x(q0, pi/2, pi/4)\n",
-    "    phased_x(q0, pi/2, pi/4)\n",
-    "    \n",
+    "    rz(q0, pi / 2)\n",
+    "    rz(q0, pi / 2)\n",
+    "    rz(q0, pi / 2)\n",
     "\n",
-    "my_1q_hugr_graph = normalize(redundant_1q_gates.compile_function().modules[0]) # get normalized hugr for program above"
+    "\n",
+    "normalize2 = NormalizeGuppy(constant_folding=True)\n",
+    "\n",
+    "my_1q_hugr_graph = normalize2(\n",
+    "    redundant_1q_gates.compile_function().modules[0]\n",
+    ")  # get normalized hugr for program above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f73dd41",
+   "metadata": {},
+   "source": [
+    "As before, we can create a `Hugr` -> `Hugr` transformation with the `PytketPass` interface."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "e7b88bdb-9cf6-4863-9d09-4c369b0016b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "squash_pass = PytketPass(SquashRzPhasedX())"
+    "squash_pass = PytketPass(SquashRzPhasedX())\n",
+    "\n",
+    "optimized_1q_hugr = squash_pass(my_1q_hugr_graph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "135b6431",
+   "metadata": {},
+   "source": [
+    "We see that our optimisation has reduced the number of Rz rotations from 3 to 1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "90c31269-05d3-45d2-8e91-abcda394bfe1",
    "metadata": {},
    "outputs": [
@@ -1283,15 +1388,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "#Rz gates in optimized program = 3\n"
      ]
     }
    ],
    "source": [
-    "optimized_1q_hugr = squash_pass(my_1q_hugr_graph)\n",
-    "\n",
-    "\n",
-    "print(count_ops(my_1q_hugr_graph, \"Rz\"))"
+    "print(f\"#Rz gates in optimized program = {count_ops(optimized_1q_hugr, 'Rz')}\")"
    ]
   }
  ],
