--- a/tket-py/examples/Guppy-opt-example.ipynb
+++ b/tket-py/examples/Guppy-opt-example.ipynb
@@ -12,6 +12,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cc35ddf1",
+   "metadata": {},
+   "source": [
+    "This notebook can be run with the following package versions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdf94fdd",
+   "metadata": {},
+   "source": [
+    "!uv pip install \\\n",
+    "    \"pytket==2.11.0\" \\\n",
+    "    \"guppylang==0.21.6\" \\\n",
+    "    \"hugr==0.14.4\" \\\n",
+    "    \"tket==0.13\" \\\n",
+    "    \"numpy>=2\" \\"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ac97adb5",
    "metadata": {},
    "source": [
@@ -1375,7 +1396,9 @@
    "id": "135b6431",
    "metadata": {},
    "source": [
-    "We see that our optimisation has reduced the number of Rz rotations from 3 to 1."
+    "We should see that our optimisation has reduced the number of Rz rotations from 3 to 1.\n",
+    "\n",
+    "Note that this isn't quite working yet. Fix requires https://github.com/Quantinuum/hugr/pull/2739"
    ]
   },
   {
