--- a/tket-py/docs/examples/Guppy-opt-example.ipynb
+++ b/tket-py/docs/examples/Guppy-opt-example.ipynb
@@ -5,7 +5,7 @@
    "id": "b5cd31d7",
    "metadata": {},
    "source": [
-    "# Program Optimization using `tket-py`\n",
+    "# Guppy Program Optimization using `tket`\n",
     "\n",
     "**Download this notebook - {nb-download}`Guppy-opt-example.ipynb`**"
    ]
@@ -23,12 +23,14 @@
    "id": "bdf94fdd",
    "metadata": {},
    "source": [
+    "```sh\n",
     "!uv pip install \\\n",
     "    \"pytket==2.11.0\" \\\n",
     "    \"guppylang==0.21.6\" \\\n",
     "    \"hugr==0.14.4\" \\\n",
     "    \"tket==0.13\" \\\n",
-    "    \"numpy>=2\" \\"
+    "    \"numpy>=2\"\n",
+    "```"
    ]
   },
   {
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "69bd0b7e-b8ed-434a-9736-d518d342a89c",
    "metadata": {},
    "outputs": [],
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bc1851fd-ba4a-49f5-b6c1-05cfddd40db7",
    "metadata": {},
    "outputs": [],
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2b189cdc",
    "metadata": {},
    "outputs": [],
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fcd46e31-a9c0-441e-9d4c-1650a4b40e3e",
    "metadata": {},
    "outputs": [
@@ -458,10 +460,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x121034ec0>"
+       "<graphviz.graphs.Digraph at 0x122981a90>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e94ab99d",
    "metadata": {},
    "outputs": [
@@ -524,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1194dba3",
    "metadata": {},
    "outputs": [],
@@ -540,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "01279ff6",
    "metadata": {},
    "outputs": [
@@ -570,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9271bab5-d165-4431-86fb-f027a12ec561",
    "metadata": {},
    "outputs": [
@@ -771,10 +773,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x120ed6b10>"
+       "<graphviz.graphs.Digraph at 0x122844dd0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e5dbf9dc",
    "metadata": {},
    "outputs": [
@@ -833,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a28e42c5-bf55-4830-b2c2-3332f350b85b",
    "metadata": {},
    "outputs": [],
@@ -848,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "56c17e8f-31df-4392-91ee-839876858826",
    "metadata": {},
    "outputs": [
@@ -1049,10 +1051,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x120f54650>"
+       "<graphviz.graphs.Digraph at 0x1228a6d50>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "4df73474-91de-4ace-a0fc-fed6df209164",
    "metadata": {},
    "outputs": [],
@@ -1094,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "b52ed22d",
    "metadata": {},
    "outputs": [],
@@ -1120,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "d97591ac",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "07632beb",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "46b3f860-4bf5-4e37-9764-cc4d8e82ce1c",
    "metadata": {},
    "outputs": [
@@ -1301,10 +1303,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x121008230>"
+       "<graphviz.graphs.Digraph at 0x122869b80>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "aff9a582",
    "metadata": {},
    "outputs": [
@@ -1352,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "78746bc6-34fe-4a68-bf94-063e3397e4e0",
    "metadata": {},
    "outputs": [],
@@ -1381,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "e7b88bdb-9cf6-4863-9d09-4c369b0016b4",
    "metadata": {},
    "outputs": [],
@@ -1403,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "90c31269-05d3-45d2-8e91-abcda394bfe1",
    "metadata": {},
    "outputs": [
