update notebook dependencies and PytketHugrPass

--- a/tket-py/docs/examples/Guppy-opt-example.ipynb
+++ b/tket-py/docs/examples/Guppy-opt-example.ipynb
@@ -28,8 +28,7 @@
     "    \"pytket==2.11.0\" \\\n",
     "    \"guppylang==0.21.6\" \\\n",
     "    \"hugr==0.14.4\" \\\n",
-    "    \"tket==0.13\" \\\n",
-    "    \"numpy>=2\"\n",
+    "    \"tket==0.12.13\"\n",
     "```"
    ]
   },
@@ -59,7 +58,7 @@
     "from hugr.hugr.base import Hugr\n",
     "from hugr.hugr.render import DotRenderer, RenderConfig\n",
     "\n",
-    "from tket.passes import NormalizeGuppy, PytketPass, PassResult\n",
+    "from tket.passes import NormalizeGuppy, PytketHugrPass, PassResult\n",
     "from pytket.passes import RemoveRedundancies, SquashRzPhasedX"
    ]
   },
@@ -72,7 +71,7 @@
     "\n",
     "Currently the Guppy compiler produces a number of compilation artifacts which its helpful to remove before thinking about optimizing the quantum gates in the program.\n",
     "\n",
-    "This HUGR cleanup can be done with the `NormalizeGuppy` pass from `tket` which removes `MakeTuple` nodes and dead functions from the HUGR graph. This simplification may be built in to the Guppy compiler in the future."
+    "This HUGR cleanup can be done with the [NormalizeGuppy](https://quantinuum.github.io/tket2/generated/tket.passes.NormalizeGuppy#tket.passes.NormalizeGuppy) pass from `tket` which removes `MakeTuple` nodes and dead functions from the HUGR graph. This simplification may be built in to the Guppy compiler in the future."
    ]
   },
   {
@@ -566,7 +565,7 @@
    "id": "7f4589bb",
    "metadata": {},
    "source": [
-    "We can simplify the structure of our HUGR graph with the `NormalizeGuppy` pass. This is recommded to \"clear the way\" for optimizations which reduce the number of quantum gates."
+    "We can simplify the structure of our HUGR graph with the [NormalizeGuppy](https://quantinuum.github.io/tket2/generated/tket.passes.NormalizeGuppy#tket.passes.NormalizeGuppy) pass. This is recommded to \"clear the way\" for optimizations which reduce the number of quantum gates."
    ]
   },
   {
@@ -1070,17 +1069,17 @@
    "id": "67b17f0d",
    "metadata": {},
    "source": [
-    "These CX gates can be cancelled using the `RemoveRedundancies` pass from pytket. To call this pass on a `Hugr` object we can create a `PytketPass` instance from the `pytket.passes` transformation."
+    "These CX gates can be cancelled using the `RemoveRedundancies` pass from pytket. To call this pass on a `Hugr` object we can create a [PytketHugrPass](https://quantinuum.github.io/tket2/generated/tket.passes.PytketHugrPass#tket.passes.PytketHugrPass) instance from the `pytket.passes` transformation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "4df73474-91de-4ace-a0fc-fed6df209164",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rr_pass = PytketPass(RemoveRedundancies())\n",
+    "rr_pass = PytketHugrPass(RemoveRedundancies())\n",
     "\n",
     "pass_result: PassResult = rr_pass.run(my_hugr_graph)"
    ]
@@ -1090,7 +1089,7 @@
    "id": "c90ec617",
    "metadata": {},
    "source": [
-    "Here we are using the `PytketPass.run` method which returns a `PassResult` object."
+    "Here we are using the `PytketPass.run` method which returns a [PassResult](https://quantinuum.github.io/tket2/generated/tket.passes.PytketHugrPass#tket.passes.PassResult) object."
    ]
   },
   {
