final dep update

--- a/tket-py/docs/examples/Guppy-opt-example.ipynb
+++ b/tket-py/docs/examples/Guppy-opt-example.ipynb
@@ -27,8 +27,8 @@
     "!uv pip install \\\n",
     "    \"pytket==2.11.0\" \\\n",
     "    \"guppylang==0.21.6\" \\\n",
-    "    \"hugr==0.14.4\" \\\n",
-    "    \"tket==0.12.13\"\n",
+    "    \"hugr>=0.14.4\" \\\n",
+    "    \"tket>=0.12.13\"\n",
     "```"
    ]
   },
@@ -458,7 +458,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x129635550>"
+       "<graphviz.graphs.Digraph at 0x119031550>"
       ]
      },
      "execution_count": 4,
@@ -743,7 +743,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1294c9a30>"
+       "<graphviz.graphs.Digraph at 0x118dcbd10>"
       ]
      },
      "execution_count": 8,
@@ -993,7 +993,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x129549650>"
+       "<graphviz.graphs.Digraph at 0x118f4d950>"
       ]
      },
      "execution_count": 11,
@@ -1217,7 +1217,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x129600140>"
+       "<graphviz.graphs.Digraph at 0x118ffc140>"
       ]
      },
      "execution_count": 16,
