fix: update incorrect version info in notebook

--- a/tket-py/docs/examples/Guppy-opt-example.ipynb
+++ b/tket-py/docs/examples/Guppy-opt-example.ipynb
@@ -25,8 +25,8 @@
    "source": [
     "```sh\n",
     "!uv pip install \\\n",
-    "    \"pytket==2.11.0\" \\\n",
-    "    \"guppylang==0.21.6\" \\\n",
+    "    \"pytket>=2.11.0\" \\\n",
+    "    \"guppylang>=0.21.6\" \\\n",
     "    \"hugr>=0.14.4\" \\\n",
     "    \"tket>=0.12.13\"\n",
     "```"
@@ -39,7 +39,7 @@
    "source": [
     "In this notebook tutorial we will show how to call pytket optimization passes on quantum programs written in [Guppy](https://docs.quantinuum.com/guppy/). Guppy programs compile to  [HUGR](https://github.com/Quantinuum/hugr) which is an intermediate representation for hybrid quantum programs.\n",
     "\n",
-    "As of `tket-py` version 0.13 `(tket>=0.13.0)` we can call any serializable pass from [pytket.passes](https://docs.quantinuum.com/tket/api-docs/passes.html) on Guppy programs. The `PytketHugrPass` interface allows the user to define a `Hugr` -> `Hugr` transformation with a pass from the pytket package.\n"
+    "As of `tket-py` version 0.12.13 `(tket>=0.12.13)` we can call any serializable pass from [pytket.passes](https://docs.quantinuum.com/tket/api-docs/passes.html) on Guppy programs. The `PytketHugrPass` interface allows the user to define a `Hugr` -> `Hugr` transformation with a pass from the pytket package.\n"
    ]
   },
   {
@@ -458,7 +458,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x119031550>"
+       "<graphviz.graphs.Digraph at 0x131689550>"
       ]
      },
      "execution_count": 4,
@@ -743,7 +743,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x118dcbd10>"
+       "<graphviz.graphs.Digraph at 0x13151deb0>"
       ]
      },
      "execution_count": 8,
@@ -993,7 +993,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x118f4d950>"
+       "<graphviz.graphs.Digraph at 0x1315a0850>"
       ]
      },
      "execution_count": 11,
@@ -1217,7 +1217,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x118ffc140>"
+       "<graphviz.graphs.Digraph at 0x131654140>"
       ]
      },
      "execution_count": 16,
