--- a/tket-py/docs/examples/Guppy-opt-example.ipynb
+++ b/tket-py/docs/examples/Guppy-opt-example.ipynb
@@ -25,10 +25,10 @@
    "source": [
     "```sh\n",
     "!uv pip install \\\n",
-    "    \"pytket>=2.11.0\" \\\n",
-    "    \"guppylang>=0.21.6\" \\\n",
-    "    \"hugr>=0.14.4\" \\\n",
-    "    \"tket>=0.12.13\"\n",
+    "    \"pytket~=2.11.0\" \\\n",
+    "    \"guppylang~=0.21.6\" \\\n",
+    "    \"hugr~=0.14.4\" \\\n",
+    "    \"tket~=0.12.13\"\n",
     "```"
    ]
   },
@@ -458,7 +458,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x131689550>"
+       "<graphviz.graphs.Digraph at 0x119de1550>"
       ]
      },
      "execution_count": 4,
@@ -743,7 +743,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x13151deb0>"
+       "<graphviz.graphs.Digraph at 0x119c77ad0>"
       ]
      },
      "execution_count": 8,
@@ -993,7 +993,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1315a0850>"
+       "<graphviz.graphs.Digraph at 0x119cfae50>"
       ]
      },
      "execution_count": 11,
@@ -1217,7 +1217,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x131654140>"
+       "<graphviz.graphs.Digraph at 0x119dac140>"
       ]
      },
      "execution_count": 16,
