update intro text

--- a/tket-py/docs/examples/Guppy-opt-example.ipynb
+++ b/tket-py/docs/examples/Guppy-opt-example.ipynb
@@ -19,17 +19,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bdf94fdd",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "```sh\n",
     "!uv pip install \\\n",
     "    \"pytket~=2.11.0\" \\\n",
     "    \"guppylang~=0.21.6\" \\\n",
     "    \"hugr~=0.14.4\" \\\n",
-    "    \"tket~=0.12.13\"\n",
-    "```"
+    "    \"tket~=0.12.14\""
    ]
   },
   {
