update __init__ to use *pytket_passes

--- a/tket-py/docs/examples/Guppy-opt-example.ipynb
+++ b/tket-py/docs/examples/Guppy-opt-example.ipynb
@@ -460,7 +460,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x111e75010>"
+       "<graphviz.graphs.Digraph at 0x115f601a0>"
       ]
      },
      "execution_count": 4,
@@ -745,7 +745,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x111d855b0>"
+       "<graphviz.graphs.Digraph at 0x115e61fd0>"
       ]
      },
      "execution_count": 8,
@@ -995,7 +995,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x111d94750>"
+       "<graphviz.graphs.Digraph at 0x115e7ca50>"
       ]
      },
      "execution_count": 11,
@@ -1025,7 +1025,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rr_pass = PytketHugrPass([RemoveRedundancies()])\n",
+    "rr_pass = PytketHugrPass(RemoveRedundancies())\n",
     "\n",
     "pass_result: PassResult = rr_pass.run(my_hugr_graph)"
    ]
@@ -1219,7 +1219,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x111d2ec60>"
+       "<graphviz.graphs.Digraph at 0x115e25e50>"
       ]
      },
      "execution_count": 16,
@@ -1304,7 +1304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "squash_pass = PytketHugrPass([SquashRzPhasedX()])\n",
+    "squash_pass = PytketHugrPass(SquashRzPhasedX())\n",
     "\n",
     "optimized_1q_hugr = squash_pass(my_1q_hugr_graph)"
    ]
