refactor: make PytketHugrPass store a list of passes (#1360)
For more efficent `PytketHugrPass.then` usage avoiding roundtrips.

See https://github.com/Quantinuum/tket2/pull/1269#discussion_r2560703968

---------

Co-authored-by: Agustín Borgna <121866228+aborgna-q@users.noreply.github.com>
Co-authored-by: Agustín Borgna <agustin.borgna@quantinuum.com>

--- a/tket-py/docs/examples/Guppy-opt-example.ipynb
+++ b/tket-py/docs/examples/Guppy-opt-example.ipynb
@@ -460,7 +460,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x130c9c830>"
+       "<graphviz.graphs.Digraph at 0x115f601a0>"
       ]
      },
      "execution_count": 4,
@@ -745,7 +745,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x130b8a210>"
+       "<graphviz.graphs.Digraph at 0x115e61fd0>"
       ]
      },
      "execution_count": 8,
@@ -995,7 +995,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x130bb9b50>"
+       "<graphviz.graphs.Digraph at 0x115e7ca50>"
       ]
      },
      "execution_count": 11,
@@ -1219,7 +1219,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x130ca4410>"
+       "<graphviz.graphs.Digraph at 0x115e25e50>"
       ]
      },
      "execution_count": 16,
