--- a/tket-py/docs/examples/Guppy-opt-example.ipynb
+++ b/tket-py/docs/examples/Guppy-opt-example.ipynb
@@ -29,7 +29,7 @@
     "    \"pytket~=2.11.0\" \\\n",
     "    \"guppylang~=0.21.6\" \\\n",
     "    \"hugr~=0.14.4\" \\\n",
-    "    \"tket~=0.12.14\""
+    "    \"tket~=0.12.15\""
    ]
   },
   {
@@ -41,7 +41,7 @@
     "\n",
     "As of `tket-py` version 0.12.13 `(tket>=0.12.13)` we can call any serializable pass from [pytket.passes](https://docs.quantinuum.com/tket/api-docs/passes.html) on Guppy programs. The `PytketHugrPass` interface allows the user to define a `Hugr` -> `Hugr` transformation with a pass from the pytket package.\n",
     "\n",
-    "The `tket=0.12.14` release contains some key bug fixes for the optimization of Gupp programs.  \n"
+    "The `tket=0.12.15` release contains some key bug fixes for the optimization of Guppy programs.  \n"
    ]
   },
   {
